# context-harness

./: .gitignore  .platonic.yml  Makefile  README.md  pyproject.toml
context_harness/: __init__.py  facade.py
context_harness/backend/: __init__.py  base.py  cache.py  file_backend.py  serialization.py
context_harness/components/: __init__.py  chat_history_manager.py  context_builder.py  experience_distiller.py  memory_manager.py
context_harness/models/: __init__.py  base.py  config.py  insertion_syntax.py  memory.py  spill.py  thread.py
docs/drafts/: 2026-04-21-context-harness-architecture.md  README.md
docs/impl/: IG-003-domain-models.md  IG-004-storage-backend.md  IG-005-facade-interface.md  README.md
docs/specs/: RFC-001-world-view.md  RFC-002-core-architecture.md  RFC-003-domain-models.md  RFC-004-storage-backend.md  RFC-005-facade-interface.md  rfc-history.md  rfc-index.md  rfc-namings.md  rfc-standard.md
docs/specs/templates/: architecture-design.md  conceptual-design.md  impl-interface-design.md  rfc-template.md
tests/: __init__.py  test_base.py  test_config.py  test_insertion_syntax.py  test_langchain_integration.py  test_memory.py  test_spill.py  test_thread.py
tests/test_backend/: __init__.py  test_backend_base.py  test_file_backend_init.py  test_file_backend_memories.py  test_file_backend_messages.py  test_file_backend_spill.py  test_file_backend_threads.py
tests/test_facade/: __init__.py  test_facade_component_access.py  test_facade_context.py  test_facade_distillation.py  test_facade_init.py  test_facade_memories.py  test_facade_spill.py  test_facade_threads.py
